--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <div class="duraludon"> 
         <h1 style="color: #c98a14">Mostra de Trabalhos</h1>
         <h1 style="color: #c98a14">Colégio Identidade</h1>
-    <img src="imagens/colgio_identidade_logo.jpg" alt="Logo Colégio Identidade">
+    <img src="colgio_identidade_logo.jpg" alt="Logo Colégio Identidade">
 
     <h1 style="color: #c98a14">ODS 12 Consumo e Produção Sustentável</h1>
 
-    <img src="imagens/ods12.png" alt="ODS 12">
+    <img src="ods12.png" alt="ODS 12">
 
     <h6 style="color: #c98a14">Artur Canarin, Arthur Farezin, Iago Voss, Julio Pires</h6>
 
@@ -39,7 +39,7 @@
 
     <h3 style="color: #c98a14">1 - Arroz de casca de abóbora</h3>
 
-    <img src="imagens/arozCascaAbobora.jpeg" alt="Arroz de casca de abóbora">
+    <img src="arozCascaAbobora.jpeg" alt="Arroz de casca de abóbora">
 
     <h4 style="color: #c98a14">Ingredientes</h4>
     <p style="color: #c98a14">
@@ -63,7 +63,7 @@
     </p>
     <br>
     <h4 style="color: #c98a14"> 2 - Bolo de laranja com casca de maçã e aveia </h4>
-    <img src="imagens/boloDeLaranja.jpg" alt="bolo de laranja">
+    <img src="boloDeLaranja.jpg" alt="bolo de laranja">
     <h3 style="color: #c98a14">Ingredientes</h3>
     <h4 style="color: #c98a14"> 1 xícara de suco de laranja natural;</h4>
     <h4 style="color: #c98a14"> 2 xícaras de maçã picadas com casca;</h4>
