--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
     <h2 style="color: #c98a14">3 - Doce de casca de banana </h2>
-    <img src="imagens/doceDeCascaDeBanana.jpg" alt="doce de casca de banana">
+    <img src="doceDeCascaDeBanana.jpg" alt="doce de casca de banana">
     <h3 style="color: #c98a14">5 xícaras (chá) de cascas de banana-nanica bem lavadas e picadas;</h3>
     <h4 style="color: #c98a14">2 xícaras (chá) de água;</h4> 
     <h4 style="color: #c98a14">2 e ½ xícaras (chá) de açúcar;</h4>
@@ -103,7 +103,7 @@
     <br>
 
 <h2 style="color: #c98a14">4 - Bolinho de casca de batata com espinafre </h2>
-<img src="imagens/bolinhodecascadebatata.webp" alt="Bolinho de batata">
+<img src="bolinhodecascadebatata.webp" alt="Bolinho de batata">
 <h3 style="color: #c98a14">Ingredientes</h3> 
 <h4 style="color: #c98a14">2 xícaras (chá) de casca de batata cozida e escorrida;</h4>
 <h4 style="color: #c98a14">½  xícara (chá) de leite;</h4>
@@ -126,7 +126,7 @@
 <br>
 
 <h2 style="color: #c98a14">5 - Bife de casca de banana </h2>
-<img src="imagens/cascaDeBananaBife.png" alt="Bolinho de batata">
+<img src="cascaDeBananaBife.png" alt="Bolinho de batata">
 <h3 style="color: #c98a14">Ingredientes</h3>
 <h4 style="color: #c98a14">Cascas de seis bananas maduras;</h4>
 <h4 style="color: #c98a14">3 dentes de alho amassados;</h4>
@@ -142,7 +142,7 @@
 <h4 style="color: #c98a14">Passe as cascas de banana já temperadas como se fosse bife a milanesa, primeiro na farinha de trigo, depois ovo, depois na farinha de rosca para finalizar; </h4>
 <h4 style="color: #c98a14">Frite as cascas em óleo vegetal, escorra bem e sirva ainda quente como acompanhamento</h4>
 <br>
-<img src="imagens/easteregg.png" alt="Logo Colégio Identidade">
+<img src="easteregg.png" alt="Logo Colégio Identidade">
 </div>
 
 
